--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,24 @@
                 android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin" />
 
+
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="NutriKart"
+                android:textStyle="bold"
+                android:textSize="21sp"
+                android:textColor="@color/white_green"
+                android:layout_marginTop="17.00dp"
+                android:layout_marginStart="7.80dp"/>
+
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,6 +89,8 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
