--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
 
     <color name="white_green">#FFFFFFFF</color>
     <color name="Mint_Green">#C8E6C9</color>
+
+    <color name="dark_gray">#A9A9A9</color>
 </resources>
