--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,19 +29,24 @@
 
 
 
-
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="NutriKart"
                 android:textStyle="bold"
-                android:textSize="21sp"
+                android:textSize="28sp"
                 android:textColor="@color/white_green"
                 android:layout_marginTop="17.00dp"
-                android:layout_marginStart="7.80dp"/>
+                android:layout_marginStart="10dp"/>
 
-
+            <Spinner
+                android:id="@+id/languageSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:spinnerMode="dropdown"
+                android:entries="@array/language_options"
+                />
 
 
 
@@ -67,7 +72,10 @@
                     android:layout_height="@dimen/_50sdp"
                     app:cardCornerRadius="@dimen/_10sdp"
                     app:cardUseCompatPadding="true"
-                    app:layout_collapseMode="pin">
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    app:cardElevation="4dp"
+                    android:layout_margin="2dp">
 
                     <TextView
                         android:id="@+id/searchEt"
@@ -177,6 +185,41 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+<!--    android:layout_alignParentBottom="true"-->
+<!--    android:layout_alignParentEnd="true"-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/whatsappIcon"-->
+<!--        android:layout_width="60dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:src="@drawable/whatsapp"-->
+<!--        android:contentDescription="WhatsApp Support"-->
+<!--        android:background="@drawable/whatsapp_background_circle"-->
+<!--        android:padding="5dp"-->
+<!--        android:elevation="8dp"-->
+<!--        android:clickable="true"-->
+<!--        android:focusable="true"/>-->
+
+    <ImageView
+        android:id="@+id/whatsappIcon"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="660dp"
+        android:src="@drawable/whatsapp"
+        android:contentDescription="WhatsApp Support"
+        android:background="@drawable/whatsapp_background_circle"
+        android:padding="5dp"
+        android:elevation="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_marginBottom="16dp"
+    />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
