--- a/app/src/main/res/layout/item_view_orders.xml
+++ b/app/src/main/res/layout/item_view_orders.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -50,12 +51,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.30"
-                    android:background="@drawable/bg_add_button"
+                    android:background="@drawable/bg_orders_status"
                     android:backgroundTint="@color/gold"
                     android:gravity="center"
                     android:text="Delivered"
                     android:textColor="#FFFFFF"
-                    android:textSize="6.90dp" />
+                    android:textSize="16.90dp" />
 
 
             </LinearLayout>
