done:: server part 1

--- a/app/src/main/res/layout/activity_order_place.xml
+++ b/app/src/main/res/layout/activity_order_place.xml
@@ -28,88 +28,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvCartProducts"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="13.00dp"
-        app:cardUseCompatPadding="true"
-        android:elevation="0dp"
-        android:padding="6.50dp"
-        android:layout_margin="7.80dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cvCartProducts"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:cardCornerRadius="13.00dp"-->
+<!--        app:cardUseCompatPadding="true"-->
+<!--        android:elevation="0dp"-->
+<!--        android:padding="6.50dp"-->
+<!--        android:layout_margin="7.80dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/view">-->
 
 
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white_green">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="13dp">
-
-                <!-- Cart Items -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvProductsItems"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-                <!-- Recommended Section -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="You may also like"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:paddingTop="16dp" />
-
-                <LinearLayout
-                    android:id="@+id/recommendedSection"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="start">
-
-                    <!-- Recommended item card -->
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="8dp">
-
-                        <ImageView
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/apple_img"
-                            android:scaleType="centerCrop" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Recommended Item"
-                            android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:paddingTop="4dp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </ScrollView>
-
-
-
-
-
-        <!--        <ScrollView-->
+<!--        <ScrollView-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
 <!--            android:background="@color/white_green">-->
@@ -122,41 +55,89 @@
 <!--                />-->
 <!--        </ScrollView>-->
 
+<!--    </androidx.cardview.widget.CardView>-->
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cvCartProducts"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintHeight_percent="0.35"-->
+<!--        app:cardCornerRadius="13.00dp"-->
+<!--        app:cardUseCompatPadding="true"-->
+<!--        android:elevation="0dp"-->
+<!--        android:padding="6.50dp"-->
+<!--        android:layout_margin="7.80dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/view">-->
 
 
+<!--        <ScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@color/white_green">-->
 
-<!--        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--            android:orientation="vertical"-->
-<!--            android:padding="8dp"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/productImage"-->
-<!--                android:layout_width="100dp"-->
-<!--                android:layout_height="100dp"-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:src="@drawable/apple_img" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/productName"-->
-<!--                android:layout_width="wrap_content"-->
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/rvProductsItems"-->
+<!--                android:layout_width="match_parent"-->
 <!--                android:layout_height="wrap_content"-->
-<!--                android:text="Tomato"-->
-<!--                android:textStyle="bold"-->
-<!--                android:paddingTop="4dp"-->
-<!--                android:textSize="14sp"/>-->
+<!--                android:layout_margin="13.00dp"-->
+<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->
+<!--        </ScrollView>-->
 
-<!--            <TextView-->
-<!--                android:id="@+id/productPrice"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="₹30"-->
-<!--                android:textSize="13sp"/>-->
-<!--        </LinearLayout>-->
+<!--    </androidx.cardview.widget.CardView>-->
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvCartProducts"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.35"
+        app:cardCornerRadius="13.00dp"
+        app:cardUseCompatPadding="true"
+        android:elevation="0dp"
+        android:padding="6.50dp"
+        android:layout_margin="7.80dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvProductsItems"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="13.00dp"
+            android:paddingBottom="2dp"
+            android:clipToPadding="false"
+            android:background="@color/white_green"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <androidx.cardview.widget.CardView
@@ -306,6 +287,7 @@
     </androidx.cardview.widget.CardView>
 
 
+
     <LinearLayout
         android:id="@+id/llCart"
         android:layout_width="match_parent"
@@ -363,7 +345,6 @@
                 android:textStyle="bold" />
 
             <ImageButton
-
                 android:layout_width="19.50dp"
                 android:layout_height="19.50dp"
                 android:layout_gravity="center"
