--- a/app/src/main/res/navigation/users_nav_graph.xml
+++ b/app/src/main/res/navigation/users_nav_graph.xml
@@ -82,5 +82,11 @@
         android:id="@+id/orderDetailFragment"
         android:name="com.example.nutrikart.fragments.OrderDetailFragment"
         android:label="fragment_order_detail"
-        tools:layout="@layout/fragment_order_detail" />
+        tools:layout="@layout/fragment_order_detail" >
+        <action
+            android:id="@+id/action_orderDetailFragment_to_ordersFragment"
+            app:destination="@id/ordersFragment"
+            app:popUpTo="@id/ordersFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
