--- a/app/src/main/res/layout/item_recommended_product.xml
+++ b/app/src/main/res/layout/item_recommended_product.xml
@@ -8,15 +8,18 @@
     android:background="@drawable/bg_product_item"
     android:layout_marginEnd="8dp">
 
+<!--    android:scaleType="centerCrop-->
+
     <ImageView
         android:id="@+id/ivProductImage"
-        android:layout_width="80dp"
+        android:layout_width="150dp"
         android:layout_height="80dp"
-        android:scaleType="centerCrop"
+
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground" />
 
     <TextView
-        android:id="@+id/tvProductName"
+        android:id="@+id/tvProductTittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Name"
@@ -25,18 +28,26 @@
         android:textColor="#000000" />
 
     <TextView
-        android:id="@+id/tvProductPrice"
+        android:id="@+id/tvProductQuantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="₹123"
+        android:text="1kg"
         android:textSize="13sp"
         android:textColor="@android:color/holo_green_dark" />
 
     <TextView
-        android:id="@+id/tvProductDesc"
+        android:id="@+id/tvProductPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="₹123"
         android:textSize="12sp"
         android:textColor="#666666" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvProductDescription"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Product Description"-->
+<!--        android:textSize="12sp"-->
+<!--        android:textColor="#666" />-->
 </LinearLayout>
