--- a/app/src/main/res/layout/item_view_cart_products.xml
+++ b/app/src/main/res/layout/item_view_cart_products.xml
@@ -9,6 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         >
 
         <LinearLayout
@@ -96,7 +97,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="1"
-                    android:textColor="@color/black"
+                    android:textColor="@color/alwaysblack"
                     android:textSize="19.50dp" />
 
             </LinearLayout>
